k8s/overlays/local/patches/kafka-local.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: social-media
spec:
  replicas: 1

  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

  template:
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
