k8s/overlays/local/patches/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gateway-ingress
  namespace: social-media
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: social-media.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-gateway
                port:
                  name: http
